--- a/Aula3/Aula3Solution/Aula3.WebApp/Views/Clientes/Create.cshtml
+++ b/Aula3/Aula3Solution/Aula3.WebApp/Views/Clientes/Create.cshtml
@@ -1,13 +1,11 @@
 ﻿@model Aula3.WebApp.Models.Cliente
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Novo cliente";
 }
 
-<h1>Create</h1>
+<h1>Novo cliente</h1>
 
-<h4>Cliente</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
