Trabalhando com rotas: Produtos;

--- a/Aula3/Aula3Solution/Aula3.WebApp/Views/Produtos/Index.cshtml
+++ b/Aula3/Aula3Solution/Aula3.WebApp/Views/Produtos/Index.cshtml
@@ -1,47 +1,49 @@
-﻿@model IEnumerable<Aula3.WebApp.Models.Produto>
+﻿@using Aula3.WebApp.Controllers;
+
+@model IEnumerable<Aula3.WebApp.Models.Produto>
 
 @{
-    ViewData["Title"] = "Index";
+	ViewData["Title"] = "Produtos";
 }
 
-<h1>Index</h1>
+<h1>Cadastro de produtos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+	<a asp-action="@nameof(ProdutosController.Novo)">Novo</a>
 </p>
+
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Unidade)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PesoGramas)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Unidade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PesoGramas)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Nome)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Unidade)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.PesoGramas)
+			</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Nome)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Unidade)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.PesoGramas)
+				</td>
+				<td>
+					<a asp-action="@nameof(ProdutosController.Selecionar)" asp-route-id="@item.Id">Selecionar</a>
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
